--- a/home.html
+++ b/home.html
@@ -28,10 +28,18 @@
 		<h3>Reservations and Waiting List</h3>
 		
 		<button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-plus"></span>Make Reservation</button>
-
-
+	</div>
+	<div class="row">
+		<div class="col-lg-8">
+			<div class="panel panel-default">
+			<h3 class="panel-title"><strong>Current Reservations</strong></h3>
+			</div>
+		</div>
 	</div>
 
+		
+
+		
 
 
 
