--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 	<title>Hot Restaturant</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	 <script src="https://code.jquery.com/jquery.js"></script>
+	 
 
 
 </head>
@@ -12,9 +12,10 @@
 	
 	h1{
 		text-align: center;
+		color:red;
 	}
 
-	h3{
+	h2{
 		text-align: center;
 	}
 
@@ -22,56 +23,33 @@
 </style>
 <body>
   <div class="container">
-	<div class="jumbotron">
-		<h1> Hot Restaturant</h1>
-		<hr>
-		<h3>Reservations and Waiting List</h3>
-		<div class="text-center"><a href=""><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-plus"></span>Make Reservation</button></div></a></div>
-	</div>
-
-	<div class="row">
-		<div class="col-lg-12"></div>
-
-			<div class="panel panel-default">
-				<div class="panel-heading">
-				<h4 class="panel-title"><strong>Current Reservations</strong></h4>
-				</div>	
-					<div class="panel-body">
-					<input type="text" id="Reserv-search" class="form-control">
-					</div>	
-		</div>	
-	</div>
-		<br>
-
-	<div class="row">
-		<div class="col-lg-12"></div>
-
-			<div class="panel panel-default">
-				<div class="panel-heading">
-				<h5 class="panel-title"><strong>Waiting List</strong></h5>
-				</div>
-					<div class="panel-body">
-					<input type="text" id="Wait-search" class="form-control">
-					</div>	
-			
-		</div>	
-	</div>
-			
-
 	
+	<div class="jumbotron">
+		<body>
+  <div class="container">
+	
+	<div class = "jumbotron">
+		<h1 class ="text center"><span class="glyphicon glyphicon-fire"></span>Hot Restaurant</h1>
+		<hr>
+		<h2 class="text center">Best Place in Town</h2>
+		<br>
+		
+		<div class="text-center">
+			<a href="/tables"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-atl"></span>View Tables</button></a>
+			<a href="/reserve"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
+		</div>	
+	
+	</div>
 
-	<script type="text/javascript">
-		$("#Make Reservations-btn").on("click", function(){
-			var searchedReserv = $("#Reserv-search").val().trim();
+	<footer class="footer">
+		<div class="container">
+		<a href="/api/tables">API Table Link</a>| <a href="/api/waitlist">API Wait List</a>| <a href="htttps://github.com//HotRestaurant">GitHub Repo</a></p>
+		</div>
+	</footer>
 
-
-			$("")
-
-
-
-
-		});
-	</script>
+</div>
 	
 </body>
+
+
 </html>
